# adam_simulator

./: .gitignore  .readthedocs.yaml  LICENSE  MUJOCO_LOG.TXT  README.md  changelog.md  geometry_list.md  main.py  pyproject.toml  requirements.txt
adam/: __init__.py  configuration_loader.py  simulation.py
adam/assets/: adam.xml  scene.xml
adam/assets/meshes/: body3.stl  end_effector_body.stl  wrist_3_rubber.stl
adam/core/entities/: configuration.py
adam/core/logger/: logger.py
adam/entities/: __init__.py  collision.py  collision_data.py  configuration_data.py  data.py  manipulator_collision.py  vector.py
adam/features/: __init__.py
adam/features/configurations/: __init__.py  configurations_manager.py
adam/features/data_manager/: __init__.py  configurations_manager.py
adam/features/map_maker/: __init__.py  map_maker.py
adam/features/simulation/: simulation.py
adam/use_cases/: collision_detector.py  data_manager.py
adam_sim/: __init__.py
adam_sim/core/: topics.yaml
adam_sim/entities/: __init__.py  acceleration.py  configuration.py  point.py  system.py  velocity.py
adam_sim/features/: __init__.py
adam_sim/features/adam/: adam.py
adam_sim/features/base/: base.py
docs/: body.rst  conf.py  index.rst  requirements.txt  sphere.rst
docs/_build/html/: .buildinfo  (+20 more)
docs/src/: api_reference.rst  examples.rst  installation.rst
src/: simulation.py
src/assets/: scene.xml
src/data/: configurations.csv
src/entities/: __init__.py  configuration.py  data.py
tests/: collisions_test.py  control_test.py  data_manager_test.py  map_maker_test.py  objects_test.py  simple_test.py  systems_test.py  test_1.py  test_2.py  test_3.py  test_collisions.py  test_configuration.py  test_control.py  test_data_manager.py  test_export_scene.py  test_farm.py  test_real_communication.py  test_returning_info.py  test_velocity.py
tests/adam_scene/: scene.xml
tests/data/: end_effector_positions_test.csv  pick_and_place.csv  shelf_reaching.csv  table_reaching.csv  test.csv
(+245 files in other folders)
